adding sample connection to pusher service

--- a/www/index.html
+++ b/www/index.html
@@ -1,1 +1,22 @@
-hello word!
+<!DOCTYPE html>
+
+<head>
+    <title>Pusher Test</title>
+    <script src="https://js.pusher.com/4.1/pusher.min.js"></script>
+    <script>
+
+        // Enable pusher logging - don't include this in production
+        Pusher.logToConsole = true;
+
+        var PUSHER_KEY = '<pusher_key>';
+        var pusher = new Pusher(PUSHER_KEY, {
+            cluster: 'eu',
+            encrypted: true
+        });
+
+        var channel = pusher.subscribe('my-channel');
+        channel.bind('my-event', function (data) {
+            alert(data.message);
+        });
+    </script>
+</head>
